# breakpad-c-wrapper

./: COPYING  Makefile.am  README  autogen.sh  configure.ac  gbc_c_wrapper.pc.in
debian/: changelog  control  copyright  rules
include/: Makefile.am  c_wrapper_api.h  gbc_c_wrapper.h
src/: Makefile.am  c_wrapper_api.cc  gbc_c_wrapper.cc
tests/: Makefile.am  check_gbc_c_wrapper.c  sigbus.c  test_signals.c  tests.h
